fix(style): fix a stackoverflow logo alignment

--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -299,8 +299,9 @@ body:hover .visually-hidden button {
   // }
 
   .fa-stack-overflow {
-    padding-left: 5px;
+    padding-left: 4px;
   }
+
   .fa-tumblr,
   .fa-tumblr-square {
     color: $tumblr-color;
